--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             background: linear-gradient(to right, #ffeb3b, #fdd835); /* Light yellow to deeper yellow gradient */
             color: #333;
             text-align: center;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
         }
         header {
             background: linear-gradient(to right, #ff6f00, #e65100); /* Deep orange to darker orange gradient */
@@ -58,7 +61,7 @@
         .live-match-text {
             display: inline-block;
             padding-left: 100%;
-            animation: scroll-left 20s linear infinite;
+            animation: scroll-left 10s linear infinite;
             font-size: 1.2em;
         }
         @keyframes scroll-left {
@@ -72,6 +75,7 @@
         main {
             padding: 20px;
             position: relative;
+            flex: 1;
         }
         table {
             width: 100%;
@@ -96,7 +100,7 @@
             background: linear-gradient(to right, #ff6f00, #e65100); /* Deep orange to darker orange gradient */
             color: white;
             padding: 10px;
-            position: fixed;
+            position: relative;
             bottom: 0;
             width: 100%;
         }
@@ -186,7 +190,7 @@
         <h1>TCL - Tapplent Carrom League Leaderboard</h1>
         <a href="rules.pdf" class="pdf-button" target="_blank">Rules PDF</a> <!-- PDF Button -->
         <div class="live-match-container">
-            <p class="live-match-text">Live Match: Team Thalassery vs Team Gladiators - Follow the action live post 5:30pm ! -- participating teams today : Thalassery vs Gladiators , CSS Chameleons vs Boom Boom Backend , Thalassery vs Sharp Shooters , Defenders vs Java Jitters ! stay tuned for live updates.... </p>
+            <p class="live-match-text">Live Match: Team A vs Team B - Follow the action live!</p>
         </div>
     </header>
     <main>
