--- a/index.html
+++ b/index.html
@@ -57,12 +57,14 @@
             margin-top: 10px;
             border-radius: 8px; /* Rounded corners */
             box-shadow: 0 0 8px rgba(0, 0, 0, 0.2); /* Shadow for depth */
+            position: relative;
         }
         .live-match-text {
             display: inline-block;
             padding-left: 100%;
             animation: scroll-left 60s linear infinite;
             font-size: 1.2em;
+            white-space: nowrap; /* Prevent wrapping */
         }
         @keyframes scroll-left {
             from {
@@ -101,14 +103,12 @@
             color: white;
             padding: 10px;
             position: relative;
-            bottom: 0;
             width: 100%;
         }
         .video-container {
             margin-top: 20px;
             position: relative;
             padding-top: 56.25%; /* 16:9 aspect ratio */
-            background-image: url('TEAM 1.jpg'); /* Replace with the actual path to your background image */
             background-size: cover; /* Ensure the image covers the entire container */
             background-position: center; /* Center the background image */
             border: 4px solid #ff6f00; /* Deep orange border */
@@ -116,13 +116,9 @@
             box-shadow: 0 0 15px rgba(0,0,0,0.2); /* Shadow for depth */
             overflow: hidden; /* Hide overflow */
         }
-        .video-container iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
+        .video-container img {
             width: 100%;
-            height: 100%;
-            border: none;
+            height: auto;
             border-radius: 8px; /* Rounded corners */
         }
         #video-search {
@@ -190,7 +186,7 @@
         <h1>TCL - Tapplent Carrom League Leaderboard</h1>
         <a href="rules.pdf" class="pdf-button" target="_blank">Rules PDF</a> <!-- PDF Button -->
         <div class="live-match-container">
-            <p class="live-match-text">Live Match: Team Thalassery vs Team Gladiators - Follow the action live post 5:30pm ! -- participating teams today : Thalassery vs Gladiators , CSS Chameleons vs Boom Boom Backend , Thalassery vs Sharp Shooters , Defenders vs Java Jitters ! stay tuned for live updates.... </p>
+            <p class="live-match-text">Live Match: Team Thalassery vs Team Gladiators - Follow the action live post 5:30pm! -- participating teams today: Thalassery vs Gladiators, CSS Chameleons vs Boom Boom Backend, Thalassery vs Sharp Shooters, Defenders vs Java Jitters! Stay tuned for live updates....</p>
         </div>
     </header>
     <main>
@@ -205,6 +201,8 @@
 
         <div class="video-container" id="video-container">
             <!-- Video will be embedded here -->
+            <img src="TEAM 1.jpg" id="video-image" alt="Slideshow Image"> <!-- Placeholder for images -->
+            <button onclick="changeImage()">Next Image</button> <!-- Button to change images -->
         </div>
     </main>
     <footer>
@@ -213,55 +211,18 @@
             <p>Developer Contact: <a href="https://www.linkedin.com/in/viswa-amit" target="_blank">🐞🐞🐞@viswa amit🤝🤝🤝</a></p>
         </div>
     </footer>
-
     <script>
-        document.addEventListener('DOMContentLoaded', fetchData);
+        let currentImageIndex = 0;
+        const images = [
+            'TEAM 1.jpg',
+            'TEAM 2.jpg',
+            'TEAM 3.jpg',
+            'TEAM 4.jpg'
+        ];
 
-        function fetchData() {
-            const sheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vRxUr0UQqs3VjjcLZh2MeIVmkNSYbzcaXNVvmA8Y_yKWGglbs8IaMxw6_PgKjedch97AIu_QFWCGnMD/pub?output=csv'; // Replace with your Google Sheets CSV URL
-
-            fetch(sheetUrl)
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error('Network response was not ok');
-                    }
-                    return response.text();
-                })
-                .then(data => {
-                    const rows = data.split('\n').map(row => row.split(','));
-                    let html = '<table id="leaderboard"><thead><tr><th>Match No</th><th>Team Name</th><th>Wins</th><th>Losses</th><th>Points</th><th>Remarks</th></tr></thead><tbody>';
-
-                    rows.slice(1).forEach((row, index) => {
-                        html += `<tr><td>${index + 1}</td><td>${row[0]}</td><td>${row[1]}</td><td>${row[2]}</td><td>${row[3]}</td><td>${row[4]}</td></tr>`;
-                    });
-
-                    html += '</tbody></table>';
-                    updateLeaderboard(html);
-                })
-                .catch(error => console.error('Error fetching data:', error));
-        }
-
-        function updateLeaderboard(html) {
-            const container = document.querySelector('#leaderboard-container');
-            container.innerHTML = html; // Insert the HTML directly into the container
-        }
-
-        function playVideo() {
-            const videoId = document.getElementById('video-id').value.trim();
-            let videoUrl;
-
-            if (videoId) {
-                if (videoId.startsWith('https://drive.google.com/')) {
-                    videoUrl = videoId;
-                } else {
-                    videoUrl = `https://www.youtube.com/embed/${videoId}`;
-                }
-
-                const videoContainer = document.getElementById('video-container');
-                videoContainer.innerHTML = `<iframe src="${videoUrl}" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>`;
-            } else {
-                alert('Please enter a valid video ID or URL.');
-            }
+        function changeImage() {
+            currentImageIndex = (currentImageIndex + 1) % images.length;
+            document.getElementById('video-image').src = images[currentImageIndex];
         }
     </script>
 </body>
